changes added for myself & you

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <body>
                 <h1> Welcome to Persistent System with Rushikesh Mane The Boss</h1>
                 <h2> Persistent is a great place to work on Software Tools like WebMethods</h2>
-                <h3> Persistent has high values and should do our best for it.</h3>
+                <h3> Persistent has high values and should do our best for it Thanku.</h3>
 
         </body>
 </html>
