--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <body>
                 <h1> You have now seen 5 more problems that have been solved in the Terraform</h1>
                 <h2> world in the last few years and are now covered by the 3rd edition of</h2>
-                <h3> Terraform: Up & Running, including how to validate module inputs</h3>
+                <h3> Terraform: Up & Running, including how to validate module inputs and output</h3>
 
         </body>
 </html>
