--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <form name="registration" class="registartion-form" onsubmit="return formValidation()">
     <table>
       <tr>
-        <td><label for="name">Name:</label></td>
+        <td><label for="name">My_Name:</label></td>
         <td><input type="text" name="name" id="name" placeholder="your name"></td>
       </tr>
       <tr>
