--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>HTML registration form</h1>
+  <h1>HTML registration form from Pankaj</h1>
   <form name="registration" class="registartion-form" onsubmit="return formValidation()">
     <table>
       <tr>
